--- a/static/style.css
+++ b/static/style.css
@@ -13,8 +13,15 @@ body {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
-  border-radius: 4px;
+  border-radius: 18px;
+  float: left;
+  margin-right: 4px;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+}
+
+.button:hover {
+  background-color: #999;
 }
 
 .toggle-label {
@@ -100,3 +107,65 @@ input:checked + .slider .off
 
 .slider.round:before {
   border-radius: 50%;}
+
+.dropbtn {
+  /*background-color: #4CAF50;*/
+  background-color: #444;
+  color: white;
+  /*padding: 16px;*/
+  padding: 2px 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  border: none;
+  cursor: pointer;
+
+  border-radius: 18px;
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
+  float: left;
+  margin-right: 4px;
+}
+
+/*--------- DROPDOWN --------*/
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  /*background-color: #f9f9f9;*/
+  background-color: #444;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  /*border-radius: 18px;*/
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #f1f1f1
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: #ccc;
+}
