--- a/static/style.css
+++ b/static/style.css
@@ -143,6 +143,8 @@ input:checked + .slider .off
   background-color: #444;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  font-family: Verdana, sans-serif;
+  font-size: 12px;
   z-index: 1;
   /*border-radius: 18px;*/
 }
@@ -168,4 +170,27 @@ input:checked + .slider .off
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: #ccc;
+}
+
+/*--------- SLIDER --------*/
+
+.slidecontainer {
+  float: left;
+  margin-left: 6px;
+  margin-right: 6px;
+}
+
+.slide {
+  width: 60px;
+  float: left;
+}
+
+.slide-label {
+  float: left;
+  color: white;
+  font-family: Verdana, sans-serif;
+  font-size: 10px;
+  clear: both;
+  text-align: center;
+  width: 60px;
 }
